--- a/sms-color-helpers/package.json
+++ b/sms-color-helpers/package.json
@@ -2,8 +2,11 @@
   "name": "sms-color-helpers",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
-  "files": ["dist"],
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "test": "jest"
