--- a/sms-color-helpers/tsconfig.json
+++ b/sms-color-helpers/tsconfig.json
@@ -3,7 +3,8 @@
     "outDir": "dist",
     "target": "es5",
     "module": "commonjs",
-    "lib": ["es2016"],
+    "lib": ["es2017", "es7", "es6", "dom"],
+    "declaration": true,
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -12,5 +13,9 @@
   },
   "include": [
     "src/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
   ]
 }
