--- a/sms-color-helpers/package.json
+++ b/sms-color-helpers/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "repository": {
     "type": "Git",
-    "url": "https://github.com/smsthn/sms-ts-helpers.git",
+    "url": "https://github.com/DSMSSTHN/sms-ts-helpers",
     "directory": "sms-color-helpers"
   },
   "devDependencies": {
