--- a/sms-ts-extensions/package.json
+++ b/sms-ts-extensions/package.json
@@ -1,29 +1,31 @@
 {
-  "name": "sms-color-helpers",
+  "name": "sms-ts-extensions",
   "version": "0.0.1",
-  "description": "some functions and extension for conversion between hex and rgb and rgba for typescript",
+  "description": "extension Methods for some of the Main interfaces in typescript",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
   "scripts": {
     "build": "tsc",
-    "test": "jest",
+    "test": "jest --config=jest.config.json",
     "prepublish": "npm test"
   },
+  "keywords": [
+    "typescript",
+    "extensions",
+    "prototype",
+    "utility"
+  ],
   "author": "DSMSSTHN",
   "license": "MIT",
   "repository": {
     "type": "Git",
     "url": "https://github.com/DSMSSTHN/sms-ts-helpers",
-    "directory": "sms-color-helpers"
+    "directory": "sms-ts-extensions"
   },
   "devDependencies": {
     "@types/jest": "^26.0.14",
-    "jest": "^26.5.3",
+    "jest": "^26.5.2",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   }
-  
 }
